--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.1.7",
+    "gh-pages": "^6.1.1",
     "number-counter": "^1.0.3",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
