--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://wilianmorimoto.github.io/react-fitclub",
-  "name": "react-fitclub",
+  "homepage": "https://wilianmorimoto.github.io/site-fitclub",
+  "name": "site-fitclub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
